--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-fastapi==0.112.0
-uvicorn==0.30.5
+fastapi==0.116.1
+gunicorn==23.0.0
 sqlalchemy==2.0.32
 pydantic==2.8.2
 pydantic-settings==2.4.0
